Added JWT token Authentication
